--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		  <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.20</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.jtwig</groupId>
@@ -88,13 +94,19 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>au.com.codeka</groupId>
+			<artifactId>carrot</artifactId>
+			<version>2.4.1</version>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/org.watertemplate/watertemplate-engine -->
-<dependency>
-    <groupId>org.watertemplate</groupId>
-    <artifactId>watertemplate-engine</artifactId>
-    <version>1.2.2</version>
-</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.watertemplate/watertemplate-engine -->
+		<dependency>
+			<groupId>org.watertemplate</groupId>
+			<artifactId>watertemplate-engine</artifactId>
+			<version>1.2.2</version>
+		</dependency>
 
 
 	</dependencies>
