Adicinados teste para geração de arquivos.

--- a/src/test/resources/application-tdd.properties
+++ b/src/test/resources/application-tdd.properties
@@ -6,3 +6,13 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
+
+#logging.level.org.springframework.web=ERROR
+#logging.level.org.hibernate=INFO
+
+#logging.level.=NONE
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=falsa
+spring.jpa.properties.hibernate.use_sql_comments=false
+ 
