Teste de geração para pasta output.

--- a/output/backend/src/main/resources/application.properties
+++ b/output/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=true
 spring.h2.console.enabled=true
-server.port=${projeto.serverPort}
+server.port=3000
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
