--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /target/
 /target/**
 
-outout/backend/target/
-outout/backend//target/**
+/output/backend/target/
+/output/backend//target/**
+/output/backend//target/classes
+/output/backend//target/classes/**
 
 
 !.mvn/wrapper/maven-wrapper.jar
