Teste geração do frontend.

--- a/src/test/resources/application-tdd.properties
+++ b/src/test/resources/application-tdd.properties
@@ -1,15 +1,14 @@
-#pring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.open-in-view=true
-#spring.h2.console.enabled=true
-#server.port=5000
+pring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=true
+spring.h2.console.enabled=true
+server.port=3000
 
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
 
 #logging.level.org.springframework.web=ERROR
 #logging.level.org.hibernate=INFO
-
 #logging.level.=NONE
 
 spring.jpa.show-sql=false
