Teste geração do frontend.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 /target/
 /target/**
 
+/output/
+/output/**
+
 /output/backend/target/classes/
 /output/backend/target/classes/**
+
 
 
 !.mvn/wrapper/maven-wrapper.jar
