--- a/src/test/resources/application-tdd.properties
+++ b/src/test/resources/application-tdd.properties
@@ -14,4 +14,7 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=falsa
 spring.jpa.properties.hibernate.use_sql_comments=false
+
+ngxbuilder=0.0.1
+
  
