--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,14 @@
-server.port=3000
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto= none
-spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuider?autoReconnect=true&useSSL=false&characterEncoding=utf8
-spring.datasource.username=ngxbuilder
-spring.datasource.password=123456
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.jpa.show-sql=true
-# DONT FORGET 
+
+# OPCAO CRIAR USER 
 # CREATE USER 'ngxbuilder'@'localhost' IDENTIFIED WITH MYSQL_NATIVE_PASSWORD BY 'ngxbuilder';
 # GRANT ALL ON ngxbuilder.* TO 'ngxbuilder'@'localhost';
 # DROP USER 'ngxbuilder'@'localhost';
+
+server.port=3000
+
