--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,10 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.jpa.show-sql=true
+
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
 
 # OPCAO CRIAR USER 
 # CREATE USER 'ngxbuilder'@'localhost' IDENTIFIED WITH MYSQL_NATIVE_PASSWORD BY 'ngxbuilder';
