--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,11 @@
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder
+
+# mysql 8.x
+spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder?autoReconnect=true&useSSL=false&characterEncoding=utf8
+# mysql 5.x, 6.x
+##spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder
+
 spring.datasource.username=root
 spring.datasource.password=1234
 
