Ajustes diversos. Teste de protótipo para o ngx-builder.

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 # mysql 8.x
 spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder?autoReconnect=true&useSSL=false&characterEncoding=utf8
@@ -19,4 +19,11 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 # DROP USER 'ngxbuilder'@'localhost';
 
 server.port=3000
+
+
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
 
