--- a/src/main/resources/application-teste.properties
+++ b/src/main/resources/application-teste.properties
@@ -12,3 +12,9 @@ spring.jpa.show-sql=true
 #CREATE USER 'teste'@'localhost' IDENTIFIED WITH MYSQL_NATIVE_PASSWORD BY 'apidfe';
 #GRANT ALL ON teste.* TO 'apidfe'@'localhost';
 # DROP USER 'apidfe'@'localhost';
+
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
