--- a/src/test/resources/application-tdd.properties
+++ b/src/test/resources/application-tdd.properties
@@ -13,4 +13,11 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 
 ngxbuilder=0.0.1
 
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
+ 
+
  
