--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=falsa
 spring.jpa.properties.hibernate.use_sql_comments=false
  
+ 
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=604800
+jwt.route.authentication.path=/auth
+jwt.route.authentication.refresh=/refresh
+ 
