--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+# Hibernate ddl auto (node, create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=none
 
 # mysql 8.x
 spring.datasource.url=jdbc:mysql://localhost:3306/ngxbuilder?autoReconnect=true&useSSL=false&characterEncoding=utf8
