--- a/src/test/resources/application-tdd.properties
+++ b/src/test/resources/application-tdd.properties
@@ -1,3 +1,6 @@
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+
 pring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=true
 spring.h2.console.enabled=true
