Ajustes diversos. Teste de protótipo para o ngx-builder.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-pring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.name=ngxbuilder
+spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:~/ngxbuilder;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;DB_CLOSE_DELAY=-1;
+spring.jpa.hibernate.ddl-auto = none
+
 spring.jpa.open-in-view=true
 spring.h2.console.enabled=true
 server.port=3000
@@ -7,14 +11,9 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 
-#logging.level.org.springframework.web=ERROR
-#logging.level.org.hibernate=INFO
-#logging.level.=NONE
-
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=falsa
-spring.jpa.properties.hibernate.use_sql_comments=false
- 
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.ERROR
  
 jwt.header=Authorization
 jwt.secret=mySecret
