Ajustes diversos. Teste de protótipo para o ngx-builder.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=node
 spring.jpa.open-in-view=true
 spring.h2.console.enabled=true
 server.port=3000
