--- a/output/frontend/package.json
+++ b/output/frontend/package.json
@@ -33,6 +33,8 @@
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
     "ng2-odometer": "^1.1.3",
+    "ngx-image-cropper": "^1.0.1",
+    "ngx-img-cropper": "^0.10.4",
     "rxjs": "^6.2.2",
     "zone.js": "~0.8.26"
   },
