--- a/output/frontend/package.json
+++ b/output/frontend/package.json
@@ -35,6 +35,7 @@
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
+    "ng-pick-datetime": "^6.0.15",
     "ng2-odometer": "^1.1.3",
     "ngx-image-cropper": "^1.0.1",
     "ngx-img-cropper": "^0.10.4",
