--- a/output/frontend/package.json
+++ b/output/frontend/package.json
@@ -14,56 +14,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.2",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "^7.1.2",
-    "@angular/compiler": "^7.1.2",
-    "@angular/core": "^7.1.2",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.1.2",
-    "@angular/http": "^7.1.2",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "^7.1.2",
-    "@angular/platform-browser-dynamic": "^7.1.2",
-    "@angular/router": "^7.1.2",
-    "@ngx-formly/core": "^4.8.2",
-    "@ngx-formly/material": "^4.8.2",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/flex-layout": "^7.0.0-beta.24",
+    "@angular/forms": "^7.2.14",
+    "@angular/http": "^7.2.14",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/router": "^7.2.14",
+    "@ngx-formly/core": "^5.0.4",
+    "@ngx-formly/material": "^5.0.4",
     "@ngx-progressbar/core": "^5.2.1",
     "@ngx-progressbar/http": "^5.2.1",
     "angular2-query-builder": "^0.4.0",
-    "bcrypt": "^3.0.2",
-    "core-js": "^2.5.4",
+    "bcrypt": "^3.0.6",
+    "core-js": "^3.0.1",
     "hammerjs": "^2.0.8",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.1",
     "jspdf": "^1.4.1",
     "ng-pick-datetime": "^7.0.0",
     "ng2-odometer": "^1.1.3",
-    "ngx-image-cropper": "^1.2.2",
-    "ngx-img-cropper": "^0.11.0",
-    "rxjs": "^6.3.3",
-    "zone.js": "~0.8.26"
+    "ngx-image-cropper": "^1.3.9",
+    "ngx-img-cropper": "^7.0.3",
+    "rxjs": "^6.5.1",
+    "zone.js": "~0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.1",
-    "@angular/cli": "^7.1.2",
-    "@angular/compiler-cli": "^7.1.2",
-    "@angular/language-service": "^7.1.2",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
+    "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~11.9.4",
-    "codelyzer": "~4.5.0",
+    "@types/node": "~11.13.7",
+    "codelyzer": "~5.0.0",
     "compodoc": "0.0.41",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.1",
-    "ts-node": "~8.0.2",
-    "tslint": "~5.12.1",
-    "typescript": "^3.1.1",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "ts-node": "~8.1.0",
+    "tslint": "~5.16.0",
+    "typescript": "3.1.6",
+    "webpack-bundle-analyzer": "^3.3.2"
   }
 }
