--- a/output/frontend/package.json
+++ b/output/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-builder",
   "descriptioin": "ngx-builder",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -14,56 +14,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.14",
-    "@angular/compiler": "^7.2.14",
-    "@angular/core": "^7.2.14",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.2.14",
-    "@angular/http": "^7.2.14",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.14",
-    "@angular/platform-browser-dynamic": "^7.2.14",
-    "@angular/router": "^7.2.14",
-    "@ngx-formly/core": "^5.0.4",
-    "@ngx-formly/material": "^5.0.4",
+    "@angular/animations": "^8.2.4",
+    "@angular/cdk": "^8.1.4",
+    "@angular/common": "^8.2.4",
+    "@angular/compiler": "^8.2.4",
+    "@angular/core": "^8.2.4",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "^8.2.4",
+    "@angular/material": "^8.1.4",
+    "@angular/platform-browser": "^8.2.4",
+    "@angular/platform-browser-dynamic": "^8.2.4",
+    "@angular/router": "^8.2.4",
+    "@ngx-formly/core": "^5.4.1",
+    "@ngx-formly/material": "^5.4.1",
     "@ngx-progressbar/core": "^5.2.1",
     "@ngx-progressbar/http": "^5.2.1",
-    "angular2-query-builder": "^0.4.0",
+    "angular2-query-builder": "^0.4.2",
     "bcrypt": "^3.0.6",
-    "core-js": "^3.0.1",
+    "core-js": "^3.2.1",
     "hammerjs": "^2.0.8",
-    "html2canvas": "^1.0.0-rc.1",
+    "html2canvas": "^1.0.0-rc.3",
     "jspdf": "^1.4.1",
     "ng-pick-datetime": "^7.0.0",
     "ng2-odometer": "^1.1.3",
-    "ngx-image-cropper": "^1.3.9",
-    "ngx-img-cropper": "^7.0.3",
-    "rxjs": "^6.5.1",
-    "zone.js": "~0.9.0"
+    "ngx-image-cropper": "^1.4.1",
+    "ngx-img-cropper": "^8.0.1",
+    "rxjs": "^6.5.2",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.8",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "^7.2.14",
-    "@types/jasmine": "~3.3.12",
+    "@angular-devkit/build-angular": "~0.803.2",
+    "@angular/cli": "^8.3.2",
+    "@angular/compiler-cli": "^8.2.4",
+    "@angular/language-service": "^8.2.4",
+    "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~11.13.7",
-    "codelyzer": "~5.0.0",
+    "@types/node": "~12.7.3",
+    "codelyzer": "^5.0.1",
     "compodoc": "0.0.41",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.1",
-    "ts-node": "~8.1.0",
-    "tslint": "~5.16.0",
-    "typescript": "3.1.6",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "ts-node": "~8.3.0",
+    "tslint": "~5.19.0",
+    "typescript": "^3.5.3",
+    "webpack-bundle-analyzer": "^3.4.1"
   }
 }
